[package]
name = "kubelift"
version = "0.0.0"
description = "KubeLift"
authors = ["Stuart Preston", "Polverio Ltd", "The KubeLift contributors"]
license = "Apache-2.0"
repository = "https://github.com/polverio/kubelift-cli"
edition = "2021"

[dependencies]
anyhow = "1.0.67"
clap = { version = "4.1.1", features = ["derive", "color"] }
chrono = "0.4"
dirs = "1.0"
minreq = { version = "2.6.0", features = ["https-rustls"] }
question = { version = "0.2.2" }
easy-di = "1.0.0-beta.3"
random-string = "1.0"
spinners = "4.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.16"
xshell = "0.2.3"
